--- a/src/main/resources/templates/bbs.html
+++ b/src/main/resources/templates/bbs.html
@@ -28,8 +28,8 @@
 			<button>記事削除</button>
 		</form><br>
 		<div th:each="com:${art.commentList}">
-			コメント者名：<span th:text="${com.name}"></span><br>
-			コメント内容：<br>
+			<span th:if="${com.name}" th:text="コメント者名："></span><span th:text="${com.name}"></span><br>
+			<span th:if="${com.content}" th:text="コメント内容："></span><br>
 			<span th:text="${com.content}"></span><br>
 			<br>
 		</div>
